test/should-fail/vsgc3890.f3
/**
 * Regress test for VSGC-3890.
 *
 *  Compiler crashes when multiple return type is used.
 *
 * @test/warning
 */

function f(){
   if (true) {
      return false;
   }
   println("void");
}
